--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --content-color-primary: #353c47;
   --content-color-secondary: #7a7f86;
 
+  --divider-color: #e0e0e0;
 
   --shadow: 0 -8px 10px 5px rgba(0, 0, 0, 0.5);
   --border-radius: 4px;
@@ -47,8 +48,16 @@ a {
   text-decoration: none;
 }
 
+hr {
+  width: 100%;
+  height: 0;
+  border: none;
+  border-bottom: 1px solid var(--divider-color);
+  opacity: 0.5;
+}
+
 a:hover {
-  color: #747bff;
+  color: var(--color-primary);
 }
 
 #root {
