--- a/src/shared/components/header/header.module.css
+++ b/src/shared/components/header/header.module.css
@@ -16,3 +16,16 @@
   flex: 0 0 auto;
   color: var(--color-primary);
 }
+
+.loading {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: var(--color-primary);
+  border: 2px solid var(--color-primary);
+  background-clip: padding-box;
+  opacity: 0.7;
+}
