--- a/src/shared/layout/main/layout-main.module.css
+++ b/src/shared/layout/main/layout-main.module.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   height: inherit;
-
+  min-width: 1440px;
+  margin: 0 auto;
 }
 
 .main {
   flex: 1;
   order: 2;
   display: flex;
-  padding: 1rem;
+  padding: 3rem 2.5rem;
 }
