feat: add intersection observer in grid podcasts

--- a/src/shared/components/card-grid/card-grid.module.css
+++ b/src/shared/components/card-grid/card-grid.module.css
@@ -5,5 +5,10 @@
   place-items: flex-start;
   gap: 10rem 2rem;
   height: auto;
-  margin: 10rem 0;
+  margin: 10rem 0 5rem;
+}
+
+.intersect {
+  height: 1px;
+  width: 100%;
 }
