--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
   --shadow: 0 -8px 10px 5px rgba(0, 0, 0, 0.5);
   --border-radius: 4px;
+  --odd-row: #f5f5f5;
 
   font-size: 100%;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
