--- a/src/pages/podcasts/card/podcast-card.module.css
+++ b/src/pages/podcasts/card/podcast-card.module.css
@@ -14,7 +14,7 @@
   text-align: center;
 }
 
-.empty {
+.emptySpace {
   display: flex;
   font-size: 0.85rem;
   text-align: center;
@@ -22,4 +22,11 @@
   max-height: 4rem;
   width: 100%;
   position: relative;
+}
+
+.cardEmpty {
+  height: 16rem;
+  background-color: #f5f5f5;
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
 }
