--- a/src/shared/layout/detail/layout-detail.module.css
+++ b/src/shared/layout/detail/layout-detail.module.css
@@ -1,7 +1,7 @@
 .layoutDetail {
   flex: 1;
   display: grid;
-  grid-template-columns: minmax(350px, 0.5fr) 3.5fr;
+  grid-template-columns: minmax(250px, 1fr) 3fr;
   gap: 3rem;
 }
 
@@ -14,11 +14,10 @@
 }
 
 .img {
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 100%;
 }
 
 .img img {
@@ -53,12 +52,13 @@
 
 .description {
   padding: 1rem;
-  display: flex;
+  display: block;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 0.85rem;
   font-style: oblique;
+  overflow: hidden;
 }
 
 .description > span {
@@ -67,6 +67,9 @@
   font-style: normal;
 }
 
+.description > p {
+  text-overflow: ellipsis;
+}
 .description > * + * {
   padding-top: 0.5rem;
 }
