feat: change colors background

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   --divider-color: #e0e0e0;
 
-  --background-color: #f5f5f5;
+  --background-color: #ffffff;
 
   --shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   --border-radius: 4px;
